# go-7zip

./: CMakeLists.txt  PropID.h  README.md  cgo.go  clib7zip.cpp  clib7zip.h  go.mod  go.sum  lib7z_test.go  wrap.cc  wrap.h
example/: example.go
lib7zip/src/: CMakeLists.txt  OSFunctions_UnixLike.cpp
